--- a/steps/4_Responsive-grid/css/listings.css
+++ b/steps/4_Responsive-grid/css/listings.css
@@ -1,11 +1,3 @@
-html,
-body {
-  height: 100%;
-  font-size: 100%;
-  font-family: var(--font-family);
-  margin: 0;
-}
-
 #tripSet_container {
   background-color: var(--bg-faint-green);
   margin: var(--space-md);
@@ -13,7 +5,8 @@ body {
 }
 
 .listing {
-  display: flex;
+  /* display: flex; */
+  width: 400px;
   background-color: var(--bg-faint-green);
   margin: var(--space-md);
   padding: var(--space-md);
@@ -27,7 +20,16 @@ body {
   /* align-self: flex-start; */
 }
 
+.app-h3.name {
+  text-align: center;
+}
+
 .listing-img-container {
-  height: auto;
-  margin-left: auto;
+  /* height: auto; */
+  /* margin-left: auto; */
+  display: flex;
+  justify-content: center;
+  background-color: var(--bg-faint-green);
+  margin: var(--space-md-half);
+
 }
