--- a/steps/4_Responsive-grid/css/vars.css
+++ b/steps/4_Responsive-grid/css/vars.css
@@ -1,5 +1,4 @@
 :root {
-
 /* 🔴🟢🔵 colors 🔴🟢🔵 */
   --main-color: #06c;
   --accent-color: #006;
@@ -11,15 +10,25 @@
 /* 🅰🔠🅱 Fonts 🅰🔠🅱 */
   --font-family: Tahoma, sans-serif;
   --font-size-md: 1.5rem;
+  --font-size-sm: 1rem;
   --font-weight-bold: bold;
-
-/* 📦 ⬅️➡️  Sizes (widths, hights etc...) ⬆️⬇️ 📦 */
-  --navbar-top-height: 2.5rem;
-  --button-1-height: 2rem;
 
 /* _-_-_ Spaces (margin, padding etc...) _-_-_ */
   --space-md: 0.5rem;
   --space-md-half: calc(var(--space-md)/2);
+  --space-md-2x: calc(var(--space-md)*2);
+
+/* 📦 ⬅️➡️  Sizes (widths, hights etc...) ⬆️⬇️ 📦 */
+  --content-max-width-LG: 1200px;
+  --content-max-width-MD: 800px;
+  --content-max-width-SM: 400px;
+  --col-width: 400px;
+  /* --img-width: 310px; maybe don't need this */
+  --image-height: 200px; /* manually set by column width for best ratio for minimal pinch / pull of pics */
+  --navbar-top-height: 2.5rem;
+  --button-1-height: 2rem;
+
+
 
 
 /* ----- */
